--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet"></link>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"> -->
+
+    </html>
+    <!-- <meta name="_csrf" th:content="${_csrf.token}"/> -->
+    <!-- <meta name="_csrf_header" th:content="${_csrf.headerName}"/> -->
+
     <title>doodooroom</title>
   </head>
   <body>
@@ -21,5 +29,16 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- <script src="/dist/build.js"></script> -->
+    <script>
+      // const token = $("meta[name='_csrf']").attr("content");
+      // const header = $("meta[name='_csrf_header']").attr("content");
+      //const name = $("#userName").val();
+
+      // console.log('index:'+token);
+      // console.log('index:'+header);
+
+      //console.log(name);
+
+    </script>
   </body>
 </html>
